--- a/spaces.yaml
+++ b/spaces.yaml
@@ -1,9 +1,9 @@
-title: Dance Movement Analyzer
-emoji: 🕺
-colorFrom: purple
-colorTo: indigo
-sdk: docker
+title: "Dance Movement Analyzer"
+emoji: "🕺"
+colorFrom: "purple"
+colorTo: "indigo"
+sdk: "docker"
 sdk_version: "0.0.1"
 app_file: "Dockerfile"
 pinned: false
-short_description: AI-powered tool for real-time dance movement analysis.
+short_description: "AI-powered tool for real-time dance movement analysis."
