--- a/spaces.yaml
+++ b/spaces.yaml
@@ -3,7 +3,6 @@ emoji: "🕺"
 colorFrom: "purple"
 colorTo: "indigo"
 sdk: "docker"
-sdk_version: "0.0.1"
-app_file: "Dockerfile"
+app_port: 8000
 pinned: false
 short_description: "AI-powered tool for real-time dance movement analysis."
