--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,4 +28,10 @@ websockets==12.0
 python-jose==3.3.0
 
 # Templating Support
-jinja2==3.1.2  # Add this line
+jinja2==3.1.2
+
+# Celery and Redis
+celery==5.5.3
+redis==7.0.
+
+flower==2.0.1  # Optional: Celery monitoring UI
