--- a/docker_compose.yml
+++ b/docker_compose.yml
@@ -1,6 +1,19 @@
 version: '3.8'
 
 services:
+  # Redis for Celery broker
+  redis:
+    image: redis:7-alpine
+    container_name: dance-analyzer-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    networks:
+      - dance-analyzer-network
+
+  # Main web application
   dance-analyzer:
     build:
       context: .
@@ -9,35 +22,59 @@ services:
     ports:
       - "7860:7860"
     volumes:
-      # Mount for persistent storage
       - ./uploads:/app/uploads
       - ./outputs:/app/outputs
       - ./logs:/app/logs
     environment:
-      # API Configuration
       - API_HOST=0.0.0.0
       - API_PORT=7860
       - DEBUG=false
-      
-      # File Limits
+      - REDIS_URL=redis://redis:6379/0
       - MAX_FILE_SIZE=104857600
       - MAX_VIDEO_DURATION=60
-      
-      # MediaPipe Settings
       - MEDIAPIPE_MODEL_COMPLEXITY=1
-      - MEDIAPIPE_MIN_DETECTION_CONFIDENCE=0.5
-      - MEDIAPIPE_MIN_TRACKING_CONFIDENCE=0.5
-      - MEDIAPIPE_SMOOTH_LANDMARKS=true
-      
-      # Processing Settings
       - MAX_WORKERS=2
+    depends_on:
+      - redis
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:7860/health')"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    networks:
+      - dance-analyzer-network
+
+  # Celery worker
+  celery-worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: dance-analyzer-worker
+    command: celery -A app.celery_app worker --loglevel=info --concurrency=2
+    volumes:
+      - ./uploads:/app/uploads
+      - ./outputs:/app/outputs
+      - ./logs:/app/logs
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+      - MEDIAPIPE_MODEL_COMPLEXITY=1
+    depends_on:
+      - redis
+    restart: unless-stopped
+    networks:
+      - dance-analyzer-network
+
+  # Flower (Celery monitoring UI) - Optional
+  flower:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: dance-analyzer-flower
+    command: celery -A app.celery_app flower --port=5555
+    ports:
+      - "5555:5555"
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+    depends_on:
+      - redis
+      - celery-worker
+    restart: unless-stopped
     networks:
       - dance-analyzer-network
 
@@ -46,6 +83,7 @@ networks:
     driver: bridge
 
 volumes:
+  redis_data:
   uploads:
   outputs:
   logs:
